# movie-charts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  components.json  docker-compose.yml  justfile  movies.json  package.json  pnpm-lock.yaml  tsconfig.app.json  user.json  vite.config.ts
.github/workflows/: deploy.yaml
crates/rpc/: Cargo.toml
scripts/: create-users.mjs
scripts/imdb/: Cargo.toml
scripts/imdb/src/: cli.rs  client.rs  main.rs
scripts/imdb/src/commands/: add_movies.rs
scripts/tmdb/: Cargo.toml
src/: App.tsx  index.css  main.tsx
src/components/: app-layout.tsx  theme-toggle.tsx
src/lib/: all-users-ratings-by-movie.ts  app-data.ts  category-match.ts  home-chart-queries.ts  home-stats.ts  rating-buckets.ts  theme-storage.ts  use-filtered-movies.ts  user-json-bundles.ts  user-movie-data.ts  utils.ts
src/pages/: genre-breakdown-page.tsx  home-page.tsx  profile-page.tsx  top-movies-page.tsx
users/: user1.json  user10.json  user11.json  user12.json  user13.json  user14.json  user15.json  user16.json  user17.json  user18.json  user19.json  user2.json  user20.json  user21.json  user22.json  user23.json  user24.json  user25.json  user26.json  user27.json  user28.json  user29.json  user3.json  user30.json  user31.json  user32.json  user33.json  user34.json  user35.json  user36.json  user37.json  user38.json  user39.json  user4.json  user40.json  user41.json  user42.json  user43.json  user44.json  user45.json  (+19 more)
website/: Dockerfile  index.html  movies.json  nginx.conf  ratings.json  tsconfig.app.json  vite.config.ts
website/src/: App.tsx  (+1 more)
(+89 files in other folders)
