[workspace]
resolver = "2"
members = [
    "crates/database",
    "crates/database/migration",
    "crates/rpc",
    "scripts/imdb",
]

[workspace.package]
authors = ["Braqzen"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/braqzen/movie-charts"
version = "0.0.0"

[workspace.dependencies]
alloy = { version = "1.1.3", features = ["k256"] }
axum = { version = "0.8.7", features = ["macros"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
